# CD-rs

./: Cargo.toml  README.md  build_rs_cov.profraw
src/: lib.rs  main.copilot.rs  main.rs  pwd_per_drive.rs  spawn_with_pwd_per_drive.rs
