[package]
name = "CD-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
normalize-path = "0.2.1"
winapi = { version = "0.3", features = ["fileapi", "winnt"] }
omnipath = "^0.1.6"
windows-sys = { version = "^0.59.0", features = [
        "Win32",
        "Win32_Security",
        "Win32_System",
        "Win32_System_Threading",
        "Win32_System_Environment",
        "Win32_Foundation"
    ]}
